2008-05-16  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/CMakeList.txt: Add xtc format for non-WIN32 platforms.

2008-05-13  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/obconversion.cpp: save the filename in ReadFile (needed for xtc
	format).

2008-05-13  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/xtcformat.cpp: Portable compressed trajectory file
	format. Used by gromacs. Since there is no real API to handle
	trajectories at the moment, ReadMolecule is used. Instead of
	CastAndClear, the OBBase object is only cast to an OBMol object to
	which conformers are added for each frame. Box, step and time are
	currently ignored. Currently read only. (Avogadro implementation)

	* Makefiles: NOT updated yet, from looking at the gromacs source, it
	seems that the XDR stuff needs special handling on windows and I don't
	want to break OB now.

2008-05-13  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/atom.cpp: Replace implementation for 
	bool IsHbondDonor() { return MatchesSMARTS("[$([#8,#7H,#9;!H0])]"); }
	with C++ code for better performance.

2008-05-10  Noel O'Boyle <baoilleach@gmail.com>

	* windows-vc2005/OBPythonOBF/setup.py: Adding missing oberror.dll.

2008-05-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/opendxformat.cpp: Bug fixing. Now roundtrips OpenDX
	data from APBS. The format will create an empty OBMol with
	attached OBGridData.

2008-05-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* Regenerate autotools build system based on Daniel's updated autogen.

	* include/openbabel/mol.h, src/mol.cpp (DeleteAtom, DeleteBond,
	DeleteResidue): Update to allow the user to free an atom, bond or
	residue (i.e., just remove the atom or bond or residue from the molecule).

2008-05-07  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/python/pybel.py: Synch with cinfony.

2008-05-06  Tim Vandermeersch <tim.vandermeersch@gmail.com>
